vertical gap between grids solved

--- a/src/components/ComponentCard.css
+++ b/src/components/ComponentCard.css
@@ -5,7 +5,7 @@
   width: 100%;
   max-width: 270px;
   border: 0.5px solid rgb(236, 236, 236);
-  margin-left: 40px;
+  margin: 40px;
 
   transition: box-shadow 0.3s cubic-bezier(.4,0,.2,1);
   padding: 16px;
